# page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: index.html  url.html  urls.html
page_analyzer/templates/for_import/: base.html  flash_messages.html
page_analyzer/templates/for_include/: flash_messages.html  header.html
page_analyzer/utils/: db_utils.py  parse_utils.py  url_utils.py
templates/: index.html
